# SNormTest

./: CMakeLists.txt  README.md  SNormTest.sln  SNormTest.vcxproj  main.cpp
